# simple-form-snodec

./: README.md  api-documentation.md  readme.md
database/: create.sql  insert.sql  select.sql  views.sql
database/scripts/: create.sql  insert.sql
frontend-app/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json
frontend-app/src/: App.vue  main.ts
frontend-app/src/assets/: main.css
frontend-app/src/components/: BackButton.vue  CommentInput.vue  CommentItem.vue  CreatedInfo.vue  HeaderProfile.vue  NoEntryMessage.vue  SingleInput.vue  ThreadItem.vue  TopicInput.vue  TopicItem.vue  UserLink.vue  UserLinkThumbnail.vue  UserThumbnail.vue  VueHelp.vue
frontend-app/src/components/api-debug/: UrlInput.vue
frontend-app/src/router/: index.ts  router.ts
frontend-app/src/services/: api-service-interface.ts  api.mock.service.ts  api.service.ts  mock-api.service.ts
frontend-app/src/services/api/: api.service.ts  (+3 more)
frontend-app/src/stores/: auth-store.ts
frontend-app/src/styles/: app.scss  main.scss  utilities.scss  variables.scss
frontend-app/src/types/: Comment.ts  Thread.ts  Topic.ts  User.ts  UserDTO.ts
frontend-app/src/util/: date.util.ts  promises.util.ts
frontend-app/src/views/: AboutView.vue  ApiDebugView.vue  EmojiView.vue  HomeView.vue  LoginView.vue  NotFoundView.vue  ThreadView.vue  TopicView.vue  UserListView.vue  UserView.vue  VueHelpView.vue
rest-server/: .gitignore  api-documentation.md
rest-server/src/: CMakeLists.txt  api_router.cpp  api_router.h  config.example.json  config.json  rest_server.cpp  secrets.example.json
(+11 files in other folders)
